<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WordRoom</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="score">Score:</string>
    <string name="time_left">Time Left:</string>
    <string name="level">Level:</string>
    <string name="speed">Speed:</string>
    <string name="new_letter">Flip Tile</string>
    <string name="submit">Add to My Room</string>
    <string name="invalid_word">"Invalid Word"</string>
    <string name="must_use_previous_word">"You have to use the edited word letters!"</string>
    <string name="use_modified">"You your previous modified word first"</string>
    <string name="title_activity_wrmain">WRmainActivity</string>
    <string name="single_player">Single Player</string>
    <string name="vs_people">VS People</string>
    <string name="view_highscore">High Score</string>
    <string name="shareSNS">Share</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_wrscore">WRscoreActivity</string>
    <string name="now_loading">Now Loading</string>
    <string name="time_attack">Time Attack</string>
    <string name="title_activity_time_attack">TimeAttackActivity</string>
    <string name="title_activity_new_score">NewScoreActivity</string>
    <string name="title_section1">Single Mode</string>
    <string name="title_section2">Time Attack</string>
    <string name="title_section3">Section 3</string>

</resources>
