<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WordRoom" >
    <LinearLayout
        android:id="@+id/gameToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/unselected"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tvScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/score"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/unselected"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tvLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/level"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/unselected"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tvSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/speed"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/unselected"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tvTimeRemaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time_left"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/timeRemaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="300"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
	    <com.funnywords.MyWordsGridView
	        android:id="@+id/wordsSpace"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_marginTop="10dp"
	        android:layout_weight="0.7"
	        android:background="@drawable/unselected" >
	    </com.funnywords.MyWordsGridView>
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_marginTop="10dp"
	        android:layout_weight="0.3"
	        android:background="@drawable/unselected_less_radius"
	        android:padding="10dp" >
	        <com.funnywords.DraggableGridView
	            android:id="@+id/workSpace"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="2dp" >
	        </com.funnywords.DraggableGridView>
	    </LinearLayout>
	    <com.funnywords.DraggableGridView
	        android:id="@+id/lettersSpace"
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_gravity="left"
	        android:layout_marginTop="10dp"
	        android:layout_weight="0.4" >
	    </com.funnywords.DraggableGridView>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="2dp" >
	        <Button
	            android:id="@+id/addLetter"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_marginRight="5dp"
	            android:layout_weight="1"
	            android:background="@drawable/button"
	            android:text="@string/new_letter"
	            android:textColor="@color/white"
	            android:textSize="13sp" />
	        <Button
	            android:id="@+id/submitWord"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_marginLeft="5dp"
	            android:layout_weight="1"
	            android:background="@drawable/button"
	            android:text="@string/submit"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:textColor="@color/white"
	            android:textSize="13sp" />
	    </LinearLayout>
</LinearLayout>
